--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WEATHER WEB APP</title>
+    <title>Weather Web App</title>
     <link rel="icon" type="image/x-icon" href="./img/search.svg" />
     <link rel="stylesheet" href="./styles/style.css" />
     <script src="./scripts/script.js"></script>
