feat: not found message added

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
         </div>
       </form>
     </nav>
-    <main></main>
+    <main>
+      <div id="not-found">
+        <p id="error-message"></p>
+      </div>
+      <div id="weather-interface"></div>
+    </main>
   </body>
 </html>
